<resources>
    <string name="app_name">Canna Essentials</string>
    <string name="collection_list_title">Collections</string>
    <string name="default_error">Oops, something went wrong, please try again …</string>
    <string name="price_from">\u20B9%s</string>
    <string name="quantity_title">Quantity:</string>
    <string name="android_pay">Android Pay</string>
    <string name="web_checkout">Web Checkout</string>
    <string name="cart_subtotal_title">SubTotal</string>
    <string name="cart_subtotal_subtitle">Shipping and taxes are calculated at checkout</string>
    <string name="cart_subtotal_price">SubTotal: %s</string>
    <string name="progress_loading">Loading…</string>
    <string name="checkout_title">Order Confirmation</string>
    <string name="checkout_summary_subtotal">Subtotal</string>
    <string name="checkout_summary_shipping">Shipping</string>
    <string name="checkout_summary_tax">Tax</string>
    <string name="checkout_summary_total">Total: %s</string>
    <string name="checkout_update_shipping_address_progress">Updating shipping address…</string>
    <string name="checkout_fetch_shipping_rates_progress">Fetching shipping rates…</string>
    <string name="checkout_apply_shipping_rate_progress">Applying shipping rate…</string>
    <string name="checkout_shipping_method_title">Shipping Method</string>
    <string name="checkout_shipping_method_change">CHANGE</string>
    <string name="checkout_shipping_method_not_selected">Not Selected</string>
    <string name="checkout_shipping_method_price_not_available">N/A</string>
    <string name="checkout_shipping_method_select_title">Select Shipping Method</string>
    <string name="checkout_confirm">Confirm Order</string>
    <string name="checkout_complete_progress">Confirming Order …</string>
    <string name="checkout_shipping_select_shipping_rate">Please select shipping method</string>
    <string name="checkout_success">Your order has been placed successfully</string>


    <string name="Recover_Password"><u>Recover Password</u></string>
    <string name="Login_Btn">Login</string>
    <string name="Sign_Up">Don\'t have an account? <u>Sign Up</u></string>

    <string name="Skip"><u>Skip</u></string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_password">Please enter at least 6 digit password</string>
    <string name="create_account_button">Create an Account</string>
    <string name="terms_conditions">By continuing you agree to our\n</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions_text">Terms &amp; Conditions</string>
    <string name="email_hint">Email</string>
    <string name="password_assistance_text">We will send you an email to recover your password</string>
    <string name="password_assistance">Password Assistance</string>
    <string name="submit">Submit</string>
    <string name="invalid_input">Please check your input</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="first_name_validation">Please enter your first name.</string>
    <string name="last_name_validation">Please enter your last name.</string>
    <string name="email_validation">Please enter correct email address.</string>
    <string name="password_validation">Password should contain at least 6 characters.</string>
    <string name="sign_up_success">Sign up successful, please login to continue!</string>
    <string name="reset_password_success">Please check your email!</string>
    <string name="privacy_policy_url">https://www.google.com/</string>
    <string name="terms_url">https://www.amazon.in/</string>
    <string name="backpress_to_exit">Press back again to exit.</string>

    <string name="enter_address">Please enter Address</string>
    <string name="enter_apartment">Please enter Apartment ,suite ,etc.</string>
    <string name="enter_city">Please enter City</string>
    <string name="enter_country">Please enter Country</string>
    <string name="enter_province">Please enter Province</string>
    <string name="enter_postal">Please enter 6 digit postal/zip Code</string>
    <string name="enter_phone_number">Please enter 10 digit phone number</string>
    <string name="save_close">Save &amp; Close</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="Rs">\u20B9</string>
    <string name="no_data_found">No data found</string>
    <string name="no_order">No order placed!</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="check_email_pass">Please check your email and password.</string>
    <string name="sold_out">Sold out</string>
    <string name="item_not_available">This item is no longer available.</string>
</resources>
