<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="20dp">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_first_name"
        app:boxStrokeColor="#306CE3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_first_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="start"
            android:imeOptions="actionDone"
            android:paddingTop="10dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_last_name"
        app:boxStrokeColor="#306CE3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_last_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="start"
            android:imeOptions="actionDone"
            android:paddingTop="10dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_email"
        app:boxStrokeColor="#306CE3"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:imeOptions="actionDone"
            android:layout_height="40dp"
            android:gravity="start"
            android:inputType="textEmailAddress"
            android:paddingTop="10dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_password"
        app:boxStrokeColor="#306CE3"
        app:passwordToggleDrawable="@drawable/password_eye">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="start"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:paddingTop="10dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/white"
        android:background="#306CE3"
        android:text="@string/create_account_button"
        android:textAllCaps="false" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/terms_conditions"
        android:textColor="@color/grey"
        android:textSize="12sp" />
</LinearLayout>
