<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="20dp">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sweetsansproregular"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/password_assistance"
        android:textAlignment="center"
        android:textColor="@color/black" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sweetsansproregular"
        android:gravity="center"
        android:text="@string/password_assistance_text"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/email_hint"
        app:boxStrokeColor="#306CE3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="start"
            android:imeOptions="actionDone"
            android:fontFamily="@font/sweetsansproregular"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:paddingTop="10dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/sweetsanspromedium"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/cornerbutton"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
