<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/webview">
    </WebView>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:background="@android:color/transparent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:gravity="bottom"
            >
            <ImageView
                android:id="@+id/appstarticon"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:visibility="visible"
                android:src="@drawable/canna_logo"
                android:baseline="10dp"
                android:layout_marginBottom="20dp"
                />

            <EditText
                android:id="@+id/text"
                android:background="@drawable/edit_text_border"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center"
                android:hint="Email"
                android:textColorHint="@color/disabledTextColor"
                android:layout_marginBottom="10dp"
                android:maxLines="1"
                />

            <EditText
                android:id="@+id/text2"
                android:background="@drawable/edit_text_border"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/black"
                android:textColorHint="@color/disabledTextColor"
                android:hint="Password"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Recover_Password"
                android:gravity="center"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white">
            </TextView>

            <Button
                android:id="@+id/newuser"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/Login_Btn"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cornerbutton"
                android:layout_marginTop="15dp"
                android:textAllCaps="false"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sign_Up"
                android:gravity="center"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Skip"
                android:gravity="center"
                android:textSize="16dp"
                android:layout_marginTop="40dp"
                android:textColor="@color/white"
                >
            </TextView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        android:id="@+id/createAccount"
        android:background="@android:color/white"
        app:layout_behavior="@string/bottom_sheet_behavior">
        <include layout="@layout/activity_createaccount" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
